# tronferno-mcu

./: .cproject  .gitmodules  .project  CHANGED  CMakeLists.txt  Doxyfile  Doxyfile_api  Doxyfile_dev  Doxyfile_usr  Makefile  Makefile-atmega328.mk  README.md  TODO.md  doxygen_rules.mk  eclipse_project.xml  fernotron.atsln  fernotron.cproj  host_test_rules.mk  push.sh  set_beta.sh  set_beta_tag.sh  set_tag.sh  unity.diff
comp/app/app_cli/: CMakeLists.txt  ca_cert.pem  cli.cc  cli_config.h  cli_fer.h  cli_imp.h  parm_alias.cc  parm_auto.cc  parm_cmd.cc  parm_config.cc  parm_config.h  parm_config_app.cc  parm_config_comp.cc  parm_config_help.cc  parm_config_switch.cc  parm_help.cc  parm_kvs.cc  parm_mcu.cc  parm_repeater.cc  parm_sep.cc  parm_shpref.cc
comp/app/app_cli/test/: test_parm_config.cpp
comp/app/app_http_server/: CMakeLists.txt
comp/app/app_http_server/esp32/: uri_handlers.cc
comp/app/app_main/: CMakeLists.txt  app_private.h  main_setup.cc
comp/app/app_main/esp32/: main.cc  main.h  main_loop.cc  main_loop_event_bits.cc  main_loop_event_bits.h  main_loop_fun_table.cc  main_loop_fun_table.h  main_loop_periodic.cc  main_loop_periodic.h  main_setup.cc  unity_setup.cc
comp/app/app_main/esp8266/: main.h  main_loop.cc  main_setup.cc  not_implemented.cc  serial.cc  timer.cc  user_main.cc  user_pre_init.cc
comp/app/app_misc/: CMakeLists.txt  opt_map.cc  opt_map_binary.cc  opt_map_consteval.cc  rtc.cc
comp/app/app_misc/esp32/: kvstore.cc  timer.cc  timer_task.cc
comp/app/app_misc/host/: kvstore.cc
comp/app/app_misc/test/: CMakeLists.txt  test_opt.cpp  test_rtc.cpp
comp/app/app_mqtt/: CMakeLists.txt  mqtt.cc  mqtt_private.h  mqtt_setup.cc
comp/app/app_mqtt/test/: CMakeLists.txt  test_publish.cc  test_receive.cc
comp/app/app_settings/: CMakeLists.txt  config.cc  config_comps.cc  config_kvs.cc  config_kvs.h  config_private.h  config_stor.cc
comp/app/app_settings/test/: CMakeLists.txt  test_config_keys.cpp
comp/app/app_uout/: CMakeLists.txt  callbacks.cc  cli_out.cc  so_out.cc  so_out.h  so_print.cc  so_print.h  so_write_config.cc  so_write_msg.cc  status_output_switch.cc
comp/app/app_uout/test/: CMakeLists.txt  test_callbacks.cc  test_target_desc_msg.cc
comp/app/app_webapp/: CMakeLists.txt  Makefile  proxy.js  rules.mk  sources.mk  wapp.html  wapp_dev.html
comp/app/app_webapp/njs/: .eslintrc.js  package.json  postcss.config.js  rollup.config.js  rollup.config.mjs  tailwind.config.js
comp/app/tronferno/: CMakeLists.txt
comp/app/tronferno/app_cli/: cli.cc  cli_config.h  cli_fernotron.hh  cli_imp.h  cli_internal.hh  parm_alias.cc  parm_auto.cc  parm_cmd.cc  parm_config.cc  parm_config.hh  parm_config_app.cc  parm_config_comp.cc  parm_config_help.cc  parm_help.cc  parm_kvs.cc  parm_mcu.cc  parm_sep.cc  (+1 more)
comp/test/test_host/: CMakeLists.txt
components/app_webapp/: CMakeLists.txt  Makefile  targets.mk  wapp_dev.html
components/app_webapp/njs/: package.json  postcss.config.js  rollup.config.mjs  tailwind.config.js
components/tronferno/test/: CMakeLists.txt  test_misc_opt.cpp  test_misc_rtc.cpp  test_mqtt_publish.cc  test_mqtt_receive.cc  test_uout_target_desc_msg.cc
configs/host-test/: CMakeLists.txt  make_help.txt
configs/host-test/config/: .config  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
configs/host-test/host_test/: sdkconfig.cmake  sdkconfig.h
src/app/app_cli/: CMakeLists.txt  cli.cc  parm_alias.cc  parm_auto.cc  parm_cmd.cc  parm_config.cc  parm_mcu.cc
src/components/app/: CMakeLists.txt  fernotron.c  fernotron.cc  rtc.c  rtc.cc
src/components/app_config/: CMakeLists.txt  Kconfig.projbuild  write_config.sh
src/components/app_main/: CMakeLists.txt  main_setup.cc
src/components/app_misc/: CMakeLists.txt  rtc.cc
src/components/cli_app/: CMakeLists.txt  cli.c  cli.cc  cli_config.c  cli_imp.h  cli_json.c  cli_mcu.c  cli_out.c  cli_out.cc  cli_parm_pair.c  cli_send.c  cli_timer.c  opt_map.cc  parm_alias.c  parm_alias.cc  parm_auto.c  parm_auto.cc  parm_cmd.c  parm_cmd.cc  parm_config.c  parm_config.cc  parm_config_switch.c  parm_config_switch.cc  parm_help.c  parm_help.cc  parm_mcu.c  parm_mcu.cc  parm_shpref.c  parm_shpref.cc
src/components/config/: CMakeLists.txt  config.c  config.cc  config_comps.c  config_comps.cc  config_defaults.h  config_kvs.c  config_kvs.cc  config_kvs.h  config_stor.c  config_stor.h
src/components/fernotron/: CMakeLists.txt  astro.c  astro.cc  fer.h  fer_api.c  fer_api.cc  fer_api.h  fer_app_cfg.h  fer_msg_basic.c  fer_msg_rx.c  fer_msg_rx.cc  fer_msg_tx.c  fer_msg_tx.cc  fer_msg_tx_queue.c  fer_msg_tx_queue.h  fer_prg.c  fer_prg.h  fer_radio_parity.c  fer_radio_parity.cc  fer_radio_parity.h  fer_radio_rx.c  fer_radio_rx.cc  fer_radio_trx.c  fer_radio_tx.c  fer_radio_tx.cc  fer_rawmsg_buffer.c  fer_rawmsg_buffer.cc  fer_rawmsg_build.c  fer_rawmsg_build.cc  fer_rx_msg.c  fer_send_msg.c  fer_send_msg.h  gmbitmask_kvs.c  gmbitmask_kvs.cc  pins.c  pins.h  transceiver.c  transceiver.h
src/components/fernotron_alias/: CMakeLists.txt  pairings.c  pairings.cc  pairings_kvs.c  pairings_kvs.cc
src/components/fernotron_auto/: CMakeLists.txt  timer_data.c  timer_data_fs.c  timer_data_fs.cc  timer_data_fs.h  timer_data_kvs.c  timer_data_kvs.cc  timer_event.c  timer_event.cc  timer_minutes.c  timer_minutes.cc  timer_state.c  timer_state_loop.c
src/components/fernotron_pos/: CMakeLists.txt  commands.c  commands.cc  current_state.c  move.c  move.cc  move.h  move_buf.c  move_buf.h  move_start.c  move_start.cc  move_stop.c  move_stop.cc  shutter_pct.c  shutter_pct.cc  shutter_pct_kvs.c  shutter_prefs_kvs.c  shutter_prefs_kvs.cc  shutter_state.c
src/components/fernotron_sep/: CMakeLists.txt  set_endpos.c
src/components/gpio/: CMakeLists.txt
src/host-test/: CMakeLists.txt
src/host-test/config/: sdkconfig.cmake  sdkconfig.h
src/host_test/: CMakeLists.txt  sdkconfig.cmake  sdkconfig.h
src/host_test/config/: sdkconfig.cmake  sdkconfig.h
test/host/: CMakeLists.txt  Makefile  host_test.cmake  unity
test/host/test_runner/: mock.cc  sdkconfig.h  test_runner.c  test_runner.h  unity.h  weak.c
(+3163 files in other folders)
